fix for description TD containing table: left alignment
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@11376 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common.css
+++ b/styles/common.css
@@ -133,6 +133,7 @@ img.fade {
   background-image:url(../images/skin/blue/tab-left-current.gif);
 	background-repeat: no-repeat;
 }
+
 /* ----- Buttons ----- */
 .button_blue, .button_green, .button_grey, button.orange {
 	margin: 0px 0px 0px 0px;
@@ -2160,9 +2161,6 @@ div .panel_block, td .panel_block {
 #siteResourceList .form_panel {  min-height: 1px;  }
 #siteResourceList .options_panel, #siteResourceList .classifier_panel, #siteResourceList .calendar_panel { background: #C8C8C8 url(../images/skin/iphone/pinstripes.png) repeat scroll 0%;  }
 
-/*
-input[type=checkbox] { display: none; }
-*/
 
 /** iPhone toggle button. **/
 /* 3 types 1)left align 2) right align 3) blue with left align */
@@ -2225,12 +2223,15 @@ input[type=checkbox] { display: none; }
 
 #div_info table { overflow: visible; }
 #div_info table .label, #div_info table .propLabelI, #div_info table .xs { float: left; overflow: visible; font-weight: bold; }
-#div_info td { overflow: visible; text-align: left; vertical-align: middle; }
+#div_info td { overflow: visible; text-align: right; vertical-align: middle; }
 #div_info .text_editor_container { text-align: left; }
 #div_info .text_editor_container .label { float: none; }
 
 #div_info td.pGr { text-align: center; }
 #div_info a { margin-left: 5px; }
+
+/* set left alignment in description TD containing table */
+#div_info table table td { text-align: left; }
 
 .panel_block .no_matches { display: none; color: #f00; font-size: 16px; font-weight:bold; margin-left: 15px; }
 
